# keso_app

./: .gitignore  LICENSE  README.md  issues.md  pyproject.toml  requirements.txt  rxconfig.py
Docs/: KesoApp-PRD.md
data_mockup/tables/: cheese_batches.json  cows.json  inventory.json  milk_batches.json  system_logs.json  transactions.json
data_mockup/tables/CSV/: cheese_batches.csv  cows.csv  inventory.csv  milk_batches.csv  system_logs.csv  transactions.csv
keso_app/: keso_app.py  styles.py
keso_app/backend/: __init__.py
keso_app/components/: __init__.py  date_picker.py  navigation_menu.py  sidebar.py  speed_dial.py  tab_content_control.py
keso_app/components/dialogs/: add_records.py  forms.py  forms_root.py
keso_app/components/table/: controls.py  pagination.py  table.py
keso_app/components/tables/: ag_column_gen.py  ag_table.py  header_mapping.py  table.py
keso_app/components/tables_old/: ag_column_gen.py  header_mapping.py  table.py
keso_app/constants/: cheese.py  shared.py
keso_app/crud_pages/: __init__.py  db_states.py  forms.py  models.py  state.py
keso_app/models/: dialogs.py  tables.py
keso_app/models/frontend/: transactions.py
keso_app/navigation/: routes.py  state.py
keso_app/pages/: __init__.py  cattle.py  contact.py  help.py  home.py  landing.py  production.py  settings.py  sign_in.py  system_logs.py  transactions.py
keso_app/states/: __init__.py  cheese_state.py  db_client.py  db_states.py  dialogs_state.py  routes.py  table_state.py
keso_app/template/: base.py
keso_app/utils/: types.py
