[project]
name = "keso_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reflex>=0.7.5",
    "reflex-ag-grid>=0.0.11",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pandas>=2.2.3",
    "supabase>=2.15.0",
]
